[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/TSCN/Header.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/PersonalDetails.gd" type="Script" id=2]
[ext_resource path="res://Font/SecularOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/ButtonTheme.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/ButtonPressedTheme.tres" type="StyleBox" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Back.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 3 )

[node name="PersonalDetails" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_left = 0.0266667
anchor_top = 0.078125
anchor_right = 0.973333
anchor_bottom = 0.8125
scroll_horizontal_enabled = false
scroll_deadzone = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="Scroll"]
margin_right = 568.0
margin_bottom = 752.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0133333
anchor_top = 0.0078125
anchor_right = 0.986667
anchor_bottom = 0.0703125
margin_right = 0.0
margin_bottom = 0.0
head = "PersonalDetails"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.107
anchor_top = 0.859
anchor_right = 0.88
anchor_bottom = 0.936
margin_left = -0.200005
margin_top = 0.383972
margin_right = -6.10352e-05
margin_bottom = -0.46405
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="HBoxContainer"]
margin_right = 229.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -824, -464 )
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="HBoxContainer"]
margin_left = 233.0
margin_right = 463.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -824, -464 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dark" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetName" type="Popup" parent="."]
visible = true
anchor_left = 0.12
anchor_top = 0.39
anchor_right = 0.88
anchor_bottom = 0.61
margin_top = 0.139984
margin_right = -6.10352e-05
margin_bottom = -0.140015
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="GetName"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GetName"]
anchor_left = 0.07
anchor_top = 0.609
anchor_right = 0.93
anchor_bottom = 0.856
margin_left = 0.0799999
margin_top = -0.0250092
margin_right = -0.0800171
margin_bottom = -1.60002
custom_constants/separation = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="GetName/HBoxContainer"]
margin_right = 184.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="GetName/HBoxContainer"]
margin_left = 207.0
margin_right = 391.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="GetName"]
anchor_left = 0.122807
anchor_top = 0.286667
anchor_right = 0.859649
anchor_bottom = 0.504444
margin_bottom = 7.62939e-06
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Name Of Property"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="GetName/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="GetName/HBoxContainer/Done" to="." method="_on_Done_pressed"]
